# suction_grasp_estimate

./: .gitignore  README.md  evaluate.py  experiment-result.csv  infer.py  plot_result.py  requirement.txt  train.py  utils.py  vis_util.py  viz_model.py
.devcontainer/: Dockerfile  devcontainer.json
baseline/: evaluate.py  experiment-rad.txt  experiment-thres.txt  experiment.py  plot_result.py  predict.py  test.py
convnet/: convert.py  dataset.py  evaluate.py  infer.py  model.py  plot_result.py  refinenet.py  resnet.py  rfnet.py  rfnet_lw.py  test.py  train.py  utils.py  vis_util.py
convnet/models/: __init__.py  bisenet.py  efficientnet.py  icnet.py  model.py  pspnet.py  resnet.py  rfnet.py  rfnet_lw.py
cpp/: CMakeLists.txt  Makefile  convert_model.py  example.cpp  inference.cpp  model_trace.py  utils.cpp  utils.hpp
experiment/: evaluate_all.sh  plot_compare.py  train_rest.sh
models/: __init__.py  bisenet.py  efficientnet.py  model.py  pspnet.py
